# Humanizer

./: .env.example  .gitignore  PRD.md  docker-compose.yml  progress.txt
apps/api/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/humanizer/: __init__.py  auth.py  logging_setup.py  models.py  pipeline.py  rate_limit.py  routes.py  settings.py
apps/api/humanizer/engines/: __init__.py  ai_tells.py  cleaner.py  detector_statistical.py  detector_synthid.py  detector_watermark.py  headings.py  lexical_en.py  lexical_he.py  llm_polish.py  numbers.py  post_llm_polish.py  protect.py  stealth.py  structural.py
apps/api/humanizer/engines/_data/: emphasis_fragments.json  perplexity_vocab.json
apps/api/humanizer/engines/ai_phrases/: en.json  he.json
apps/api/humanizer/engines/data/: freq_en.txt  freq_he.txt
apps/api/humanizer/engines/synonyms/: en.json  he.json
apps/api/tests/: conftest.py  test_ai_tells.py  test_cleaner.py  test_detector_statistical.py  test_detector_synthid.py  test_detector_watermark.py  test_fixtures_distinguish.py  test_full_pipeline_yotpo.py  test_headings.py  test_health.py  test_humanize_e2e.py  test_lexical_en.py  test_lexical_he.py  test_llm_mode.py  test_models.py  test_numbers.py  test_pipeline.py  test_post_llm_polish.py  test_protect.py  test_rate_limit.py  test_routes.py  test_stealth.py  test_structural.py  test_structural_abbrev.py
apps/api/tests/fixtures/: ai_en.json  ai_he.json  human_en.json  human_he.json
apps/web/: .dockerignore  (+6 more)
docs/: deploy-coolify.md  engines.md
(+17 files in other folders)
