[project]
name = "humanize-api"
version = "0.1.0"
description = "AI Humanizer + Detector backend (local engines, no external LLM APIs)"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["humanizer", "main.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
